--- a/app_mynd/android/app/src/main/AndroidManifest.xml
+++ b/app_mynd/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app_mynd">
+    package="com.example.myndlia">
    <application
-        android:label="app_mynd"
+        android:label="myndlia"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
