--- a/app_mynd/pubspec.yaml
+++ b/app_mynd/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_screenutil: ^5.5.3+2
   flutter_svg: ^1.0.3
   get: ^4.6.5
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
